roles/gateway/templates/gateway/iptables-xs
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
@@SQUID@@
-A POSTROUTING -o ${xsce_networks.wan.iface} -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Allow ssh access on all interfaces
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

# Allow all LAN services
-A INPUT ! -i ${xsce_networks.wan.iface} -m state --state NEW -j ACCEPT

# NAT is allowed
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -o ${xsce_networks.wan.iface} -j ACCEPT

# Reject everything else
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
